ufsutils (7.2-2) UNRELEASED; urgency=low

  * Remove the warning in the package's description about the fact it is an
    experimental package.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 11:31:11 +0200

ufsutils (7.2-1) unstable; urgency=low

  [ Guillem Jover ] 
  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.
  * Remove commented out lines in debian/rules.
  * Do not set unused INSTALL_PROGRAM.
  * Line wrap Build-Depends fields for lines longer than 80 chars.
  * Use asterisks for bulleted lists in package description.
  * Remove DPATCHLEVEL variable from patches.
  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of "dh_clean -k".
  * Do not use stamp files for build.
  * Include quilt.make snippet instead of using ad-hoc code.
  * Remove unused ufsutils variable and rename libufs to lib in debian/rules.

  [ Petr Salinger ]
  * New upstream version (RELENG_7_2_0_RELEASE)
  * Allow mkfs.ufs not only on character devices (GNU/kFreeBSD), but also
    on block devices (Linux) and plain files (i.e. loopback). (Closes: #526586)

  [ Aurelien Jarno ]
  * Bump Standard-Versions to 3.8.1 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 21 May 2009 20:25:46 +0200

ufsutils (7.1-2) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_1_0_RELEASE)

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 11 Jan 2009 12:01:23 +0100

ufsutils (7.0-2) unstable; urgency=low

  * debian/patches/01_libufs.patch Link libufs with libbsd.
  * debian/patches/*: Use LDADD += instead of LDADD =.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 17:21:09 +0200

ufsutils (7.0-1) unstable; urgency=low

  [Petr Salinger]
  * Add build-dependency on quilt, and use quilt in debian/rules
  * Based on upstream version 7.0
  * Include all needed sources in debian/upstream.sh