@@ -28,12 +28,3 @@ Description: UFS filesystems utilities
   * tunefs.ufs
   * badsect.ufs
   * ffsinfo
-
-Package: libufs2
-Architecture: any
-Section: libs
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: UFS filesystem shared library
- Shared library to manage the UFS filesystem, mostly used in BSD or derived
- operating systems. This include FFS, UFS and UFS2.
-
