@@ -66,7 +66,7 @@ Index: ufsutils/libufs/Makefile
 ===================================================================
 --- ufsutils.orig/libufs/Makefile
 +++ ufsutils/libufs/Makefile
-@@ -1,26 +1,16 @@
+@@ -1,26 +1,17 @@
  # $FreeBSD: src/lib/libufs/Makefile,v 1.14.8.1 2009/04/15 03:14:26 kensmith Exp $
  
  LIB=	ufs
@@ -85,6 +85,7 @@ Index: ufsutils/libufs/Makefile
 -MLINKS+= ufs_disk_close.3 ufs_disk_fillout.3
 -MLINKS+= ufs_disk_close.3 ufs_disk_fillout_blank.3
 -MLINKS+= ufs_disk_close.3 ufs_disk_write.3
++LIB_type = static
 +ALL_CFLAGS+= -D_LIBUFS
 +ifdef LIBUFS_DEBUG
 +ALL_CFLAGS+= -D_LIBUFS_DEBUGGING
