@@ -16,7 +16,7 @@ Index: ufsutils/badsect.ufs/Makefile
 +MAN = badsect.8:badsect.ufs.8
 +
 +INCLUDES = -I../libufs
-+LDADD += -L../libufs -lufs
++LDADD += -L../libufs -lufs -lbsd
 +
 +include ../Makefile.common
  
