@@ -27,7 +27,7 @@ Index: ufsutils/dumpfs.ufs/Makefile
 +WARNS = 0
 +MAN = dumpfs.8:dumpfs.ufs.8
 +
-+LDADD += -L../libufs/ -lufs
++LDADD += -L../libufs/ -lufs -lbsd
 +INCLUDES = -I../libufs
 +
 +include ../Makefile.common
