@@ -16,7 +16,7 @@ Index: ufsutils/ffsinfo/Makefile
 -SRCS=	ffsinfo.c debug.c
 -MAN=	ffsinfo.8
 +ALL_CFLAGS = -DFS_DEBUG -I../growfs.ufs -I../libufs
-+LDADD += -L../libufs -lufs
++LDADD += -L../libufs -lufs -lbsd
 +
 +include ../Makefile.common
  
