@@ -548,7 +548,7 @@ Index: ufsutils/fsck.ufs/Makefile
 +	../mount/getmntopts.c
  
 -.PATH:	${.CURDIR}/../../sys/ufs/ffs ${.CURDIR}/../mount
-+LDADD += -L../libport -lport -L. -l$(LIB) -L../libufs -lufs
++LDADD += -L../libport -lport -L. -l$(LIB) -L../libufs -lufs -lbsd -lfreebsd
 +INCLUDES = -I. -I../libufs -I../mount
 +
 +include ../Makefile.common
