@@ -102,7 +102,7 @@ Index: ufsutils/fsdb.ufs/Makefile
 +MAN = fsdb.8:fsdb.ufs.8
 +SRCS = fsdb.c fsdbutil.c
 +WARNS = 0
-+LDADD += -ledit -ltermcap -L../libufs -lufs -L../fsck.ufs -lfsck.ufs
++LDADD += -ledit -ltermcap -L../libufs -lufs -lbsd -L../fsck.ufs -lfsck.ufs -lfreebsd
 +DPADD += ${LIBEDIT} ${LIBTERMCAP}
 +INCLUDES = -I../fsck.ufs
  
