@@ -2,8 +2,10 @@ ufsutils (7.2-2) UNRELEASED; urgency=low
 
   * Remove the warning in the package's description about the fact it is an
     experimental package.
+  * Remove the libufs2 library and link statically instead. It is small, not
+    really usable, and anyway comes without -dev package.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 11:31:11 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 13:57:13 +0200
 
 ufsutils (7.2-1) unstable; urgency=low
 
